add surface with opacity example

--- a/notebooks/fetch_pdb_3pqr.ipynb
+++ b/notebooks/fetch_pdb_3pqr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -26,6 +26,17 @@
     "view.representations = []\n",
     "view.add_representation('cartoon', color='residueindex')\n",
     "view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.add_representation('surface', opacity=0.5)"
    ]
   }
  ],
