--- a/nglview/tests/notebooks/remote_call-complist.ipynb
+++ b/nglview/tests/notebooks/remote_call-complist.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "#view._remote_call('centerView')"
+    "# !ls tz2.pdb"
    ]
   },
   {
@@ -34,20 +34,38 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "message\n",
+      "{'type': 'call_method', 'kwargs': {'defaultRepresentation': True}, 'args': ['./tz2.pdb'], 'methodName': 'loadFile', 'target': 'stage'}\n"
+     ]
+    }
+   ],
    "source": [
-    "view._remote_call('loadFile', target='stage', args=['./tz2.pdb'], kwargs={'defaultRepresentation': True})\n"
+    "view._remote_call('loadFile', target='stage', args=['./tz2.pdb'], kwargs={'defaultRepresentation': True})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "message\n",
+      "{'kwargs': {}, 'args': [True, '1-12'], 'methodName': 'centerView', 'type': 'call_method', 'component_index': 1, 'target': 'component'}\n"
+     ]
+    }
+   ],
    "source": [
-    "view._remote_call('centerView', target='complist', kwargs={'index': 0})"
+    "view._remote_call('centerView', target='component', args=[True, \"1-12\"], kwargs={'component_index': 1})"
    ]
   }
  ],
