update notebook for complist

--- a/nglview/tests/notebooks/remote_call-complist.ipynb
+++ b/nglview/tests/notebooks/remote_call-complist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -19,53 +19,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# !ls tz2.pdb"
+    "view._remote_call('loadFile', target='stage', args=['tz2.pdb'], kwargs={'defaultRepresentation': True})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "message\n",
-      "{'type': 'call_method', 'kwargs': {'defaultRepresentation': True}, 'args': ['./tz2.pdb'], 'methodName': 'loadFile', 'target': 'stage'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "view._remote_call('loadFile', target='stage', args=['./tz2.pdb'], kwargs={'defaultRepresentation': True})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "message\n",
-      "{'kwargs': {}, 'args': [True, '1-12'], 'methodName': 'centerView', 'type': 'call_method', 'component_index': 1, 'target': 'component'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "view._remote_call('centerView', target='component', args=[True, \"1-12\"], kwargs={'component_index': 1})"
+    "# compList[0].centerView(True, \"1-10\")\n",
+    "view._remote_call('centerView', target='component', args=[True, \"1-10\"], kwargs={'component_index': 1})"
    ]
   }
  ],
@@ -85,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
