--- a/nglview/tests/notebooks/data_sending_speed.ipynb
+++ b/nglview/tests/notebooks/data_sending_speed.ipynb
@@ -11,21 +11,55 @@
     "import pytraj as pt\n",
     "import nglview as nv\n",
     "\n",
-    "traj = pt.datafiles.load_tz2()\n",
+    "traj = pt.datafiles.load_tz2_ortho()\n",
     "view = nv.show_pytraj(traj)\n",
+    "view.representations = []\n",
+    "view.add_licorice()\n",
+    "view.add_cartoon()\n",
     "view"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view.coordinates = view.trajectory.trajectory.xyz[0].ravel().tobytes()"
+    "view.caching()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view.cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
