--- a/nglview/tests/notebooks/data_sending_speed.ipynb
+++ b/nglview/tests/notebooks/data_sending_speed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
     "import pytraj as pt\n",
     "import nglview as nv\n",
     "\n",
-    "traj = pt.datafiles.load_tz2_ortho()\n",
+    "traj = pt.load(nv.datafiles.TRR, nv.datafiles.PDB)\n",
     "view = nv.show_pytraj(traj)\n",
     "view.representations = []\n",
     "view.add_licorice()\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -32,24 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "view.cache"
+    "view.uncaching()"
    ]
   },
   {
