[WIP] using base64 to encode numpy array to send to JS (#67)
ADD: caching

--- a/nglview/tests/notebooks/send_message.ipynb
+++ b/nglview/tests/notebooks/send_message.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -11,18 +11,18 @@
     "import pytraj as pt\n",
     "import nglview as nv\n",
     "\n",
-    "fn = '/home/haichit/pytraj_github/pytraj/tests/data/tz2.ortho.nc'\n",
-    "tn = '/home/haichit/pytraj_github/pytraj/tests/data/tz2.ortho.parm7'\n",
-    "\n",
-    "traj = pt.load([fn,], tn).superpose('@CA')\n",
+    "traj = pt.datafiles.load_tz2()\n",
     "view = nv.show_pytraj(traj)\n",
     "xyz = traj.xyz\n",
+    "msg_list  = dict(data=xyz.flatten().tolist())\n",
+    "msg_bytes = xyz.ravel().tobytes()\n",
+    "msg_base64 = view.trajectory.get_coordinate_dict()\n",
     "view"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -31,16 +31,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.03 s, sys: 15 ms, total: 1.05 s\n",
-      "Wall time: 1.05 s\n"
+      "1 loop, best of 3: 442 ms per loop\n"
      ]
     }
    ],
    "source": [
-    "%%time\n",
+    "%%timeit\n",
     "\n",
-    "msg = dict(data=xyz.flatten().tolist())\n",
-    "view.send(msg)"
+    "\n",
+    "view.send(msg_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 loops, best of 3: 102 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "view.send(msg_bytes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 loops, best of 3: 5.02 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit \n",
+    "\n",
+    "view.send(msg_base64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.caching()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view.cache"
    ]
   }
  ],
