--- a/nglview/tests/notebooks/representations.ipynb
+++ b/nglview/tests/notebooks/representations.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -84,34 +84,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'params': {'sele': 'polymer'}, 'type': 'cartoon'},\n",
-       " {'params': {'sele': 'hetero OR mol'}, 'type': 'ball+stick'},\n",
-       " {'params': {'sele': 'polymer'}, 'type': 'cartoon'},\n",
-       " {'params': {'sele': 'hetero OR mol'}, 'type': 'ball+stick'},\n",
-       " {'params': {'sele': 'all'}, 'type': 'cartoon'},\n",
-       " {'params': {'sele': 'polymer'}, 'type': 'cartoon'},\n",
-       " {'params': {'sele': 'hetero OR mol'}, 'type': 'ball+stick'},\n",
-       " {'params': {'sele': 'polymer'}, 'type': 'cartoon'},\n",
-       " {'params': {'sele': 'hetero OR mol'}, 'type': 'ball+stick'},\n",
-       " {'params': {'sele': 'all'}, 'type': 'cartoon'},\n",
-       " {'params': {'sele': 'all'}, 'type': 'cartoon'}]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "view.representations"
+    "view.representations = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "nv.show_structure_file('tz2.pdb')"
    ]
   }
  ],
