--- a/nglview/tests/notebooks/get_message.ipynb
+++ b/nglview/tests/notebooks/get_message.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,18 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view._remote_call('addRepresentation', target='structure_component', args=['cartoon'])"
+    "view._remote_call('addRepresentation', target='StructureComponent', args=['cartoon'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -40,24 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view._remote_call('clearRepresentations', target='structure_component')"
+    "view._remote_call('clearRepresentations', target='StructureComponent')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view._remote_call('addRepresentation', target='structure_component', args=['licorice'])"
+    "view._remote_call('addRepresentation', target='StructureComponent', args=['licorice'])"
    ]
   }
  ],
