--- a/nglview/tests/notebooks/remote_call.ipynb
+++ b/nglview/tests/notebooks/remote_call.ipynb
@@ -40,7 +40,7 @@
     "              antialias=True,\n",
     "              trim=False,\n",
     "              transparent=False)\n",
-    "view._remote_call('screenshot', target='stage', kwargs=params)"
+    "view._remote_call('screenshot', target='Stage', kwargs=params)"
    ]
   }
  ],
@@ -60,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
