--- a/nglview/tests/notebooks/remote_call_structureComponent.ipynb
+++ b/nglview/tests/notebooks/remote_call_structureComponent.ipynb
@@ -18,13 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view._remote_call('addRepresentation', target='structure_component', args=['licorice'], kwargs={'color': 'residueindex'})"
+    "view._remote_call('addRepresentation', target='StructureComponent',\n",
+    "                  args=['licorice'], kwargs={'color': 'residueindex'})"
    ]
   }
  ],
