--- a/nglview/tests/notebooks/remote_call-complist.ipynb
+++ b/nglview/tests/notebooks/remote_call-complist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -19,25 +19,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view._remote_call('loadFile', target='stage', args=['tz2.pdb'], kwargs={'defaultRepresentation': True})"
+    "view._remote_call('loadFile', target='Stage', args=['tz2.pdb'], \n",
+    "                  kwargs={'defaultRepresentation': True})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# compList[0].centerView(True, \"1-10\")\n",
-    "view._remote_call('centerView', target='component', args=[True, \"1-10\"], kwargs={'component_index': 1})"
+    "view._remote_call('centerView', target='compList', \n",
+    "                  args=[True, \"1-10\"], kwargs={'component_index': 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "view.center_view(selection='1-2', index=0)"
    ]
   }
  ],
