--- a/nglview/tests/notebooks/loadFile.ipynb
+++ b/nglview/tests/notebooks/loadFile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -31,6 +31,28 @@
     "                 args=[blob],\n",
     "                 kwargs={'defaultRepresentation': True, 'ext': 'pdb', 'firstModelOnly': True}\n",
     "                 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.center_view(index=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view.center_view(index=1)"
    ]
   }
  ],
