--- a/nglview/tests/notebooks/remote_call-complist.ipynb
+++ b/nglview/tests/notebooks/remote_call-complist.ipynb
@@ -19,19 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view._remote_call('loadFile', target='Stage', args=['tz2.pdb'], \n",
-    "                  kwargs={'defaultRepresentation': True})"
+    "blob = open('tz2.pdb').read()\n",
+    "view._remote_call('loadFile', target='Stage', args=[blob], \n",
+    "                  kwargs={'defaultRepresentation': True, 'ext': 'pdb'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -39,18 +40,18 @@
    "source": [
     "# compList[0].centerView(True, \"1-10\")\n",
     "view._remote_call('centerView', target='compList', \n",
-    "                  args=[True, \"1-10\"], kwargs={'component_index': 0})"
+    "                  args=[True, \"1-10\"], kwargs={'component_index': 1})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "view.center_view(selection='1-2', index=0)"
+    "view.center_view(selection='1-2', index=1)"
    ]
   }
  ],
