--- a/nglview/tests/notebooks/loadFile_cpp4.ipynb
+++ b/nglview/tests/notebooks/loadFile_cpp4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -10,43 +10,46 @@
    "source": [
     "import pytraj as pt, nglview as nv\n",
     "\n",
-    "traj = pt.datafiles.load_trpcage()\n",
-    "\n",
+    "traj = pt.load('../../../../ngl/data/3pqr.pdb')\n",
     "view = nv.show_pytraj(traj)\n",
     "view"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "blob = open('tz2.pdb').read()\n",
+    "fn = '../../../../ngl/data/3pqr.ccp4.gz'\n",
+    "\n",
+    "!cp $fn ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "params = dict(defaultRepresentation=True)\n",
+    "info = dict(type='path',\n",
+    "            data='3pqr.ccp4.gz')\n",
     "\n",
     "view._remote_call(\"loadFile\",\n",
-    "                 target='Stage',\n",
-    "                 args=[{'type': 'blob', 'data': blob}],\n",
-    "                 kwargs={'defaultRepresentation': True, 'ext': 'pdb', 'firstModelOnly': True}\n",
+    "                  target='Stage',\n",
+    "                  args=[info],\n",
+    "                  kwargs=params,\n",
     "                 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "view.center_view(index=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
