--- a/nglview/tests/notebooks/loadFile.ipynb
+++ b/nglview/tests/notebooks/loadFile.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import pytraj as pt\n",
-    "import nglview as nv\n",
+    "import pytraj as pt, nglview as nv\n",
     "\n",
-    "traj = pt.load(nv.datafiles.TRR, nv.datafiles.PDB)\n",
+    "traj = pt.datafiles.load_trpcage()\n",
     "\n",
     "view = nv.show_pytraj(traj)\n",
     "view"
@@ -19,39 +18,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "blob = open('tz2.pdb').read()\n",
-    "view._remote_call('loadFile', target='Stage', args=[blob], \n",
-    "                  kwargs={'defaultRepresentation': True, 'ext': 'pdb'})"
+    "\n",
+    "view._remote_call(\"loadFile\",\n",
+    "                 target='Stage',\n",
+    "                 args=[{'type': 'blob', 'data': blob}],\n",
+    "                 kwargs={'defaultRepresentation': True, 'ext': 'pdb', 'firstModelOnly': True}\n",
+    "                 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# compList[0].centerView(True, \"1-10\")\n",
-    "view._remote_call('centerView', target='compList', \n",
-    "                  args=[True, \"1-10\"], kwargs={'component_index': 0})"
+    "view.center_view(index=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "view.center_view(selection='1-2', index=1)"
+    "view.center_view(index=1)"
    ]
   }
  ],
