--- a/nglview/tests/notebooks/loadFile_cpp4.ipynb
+++ b/nglview/tests/notebooks/loadFile_cpp4.ipynb
@@ -4,15 +4,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import pytraj as pt\n",
-    "import nglview as nv\n",
+    "import pytraj as pt, nglview as nv\n",
     "\n",
-    "traj = pt.load(nv.datafiles.TRR, nv.datafiles.PDB)\n",
-    "\n",
+    "traj = pt.load('../../../../ngl/data/3pqr.pdb')\n",
     "view = nv.show_pytraj(traj)\n",
     "view"
    ]
@@ -25,33 +23,39 @@
    },
    "outputs": [],
    "source": [
-    "blob = open('tz2.pdb').read()\n",
-    "view._remote_call('loadFile', target='Stage', args=[blob], \n",
-    "                  kwargs={'defaultRepresentation': True, 'ext': 'pdb'})"
+    "fn = '../../../../ngl/data/3pqr.ccp4.gz'\n",
+    "\n",
+    "!cp $fn ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "params = dict(defaultRepresentation=True)\n",
+    "info = dict(type='path',\n",
+    "            data='3pqr.ccp4.gz')\n",
+    "\n",
+    "view._remote_call(\"loadFile\",\n",
+    "                  target='Stage',\n",
+    "                  args=[info],\n",
+    "                  kwargs=params,\n",
+    "                 )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# compList[0].centerView(True, \"1-10\")\n",
-    "view._remote_call('centerView', target='compList', \n",
-    "                  args=[True, \"1-10\"], kwargs={'component_index': 0})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "view.center_view(selection='1-2', index=1)"
+    "view.center_view(index=1)"
    ]
   }
  ],
