--- a/nglview/tests/notebooks/export_image.ipynb
+++ b/nglview/tests/notebooks/export_image.ipynb
@@ -18,16 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "args = [2, True, False, False, True]\n",
-    "view._remote_call('exportImage',\n",
-    "                  target='Stage',\n",
-    "                  args=args)"
+    "args = [2, True, True, False]\n",
+    "\n",
+    "view.export_image(*args)"
    ]
   }
  ],
