ADD: export_image (#81)
* correct

* add export_image

* update readme

* update readme

* make sure to have export_image

--- a/nglview/tests/notebooks/export_image.ipynb
+++ b/nglview/tests/notebooks/export_image.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,16 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "args = ['4x', True, False, False, True]\n",
-    "view._remote_call('exportImage',\n",
-    "                  target='Stage',\n",
-    "                  args=args)"
+    "args = [2, True, True, False]\n",
+    "\n",
+    "view.export_image(*args)"
    ]
   }
  ],
