--- a/nglview/tests/notebooks/test_mdanalysis.ipynb
+++ b/nglview/tests/notebooks/test_mdanalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -15,45 +15,12 @@
     "from MDAnalysisTests import datafiles as mda_datafiles\n",
     "import nglview as nv\n",
     "\n",
-    "universe = Universe(mda_datafiles.PSF, mda_datafiles.DCD)\n",
+    "universe = Universe(nv.datafiles.PDB)\n",
     "view = nv.show_mdanalysis(universe)\n",
     "view.representations = []\n",
     "view.add_licorice('not hydrogen')\n",
     "view.add_cartoon('not hydrogen')\n",
     "view"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "view.cache"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "view.caching()"
    ]
   },
   {
@@ -64,38 +31,36 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sys.version_info(major=3, minor=5, micro=1, releaselevel='final', serial=0)\n"
+     ]
     }
    ],
    "source": [
-    "view.cache"
+    "import sys\n",
+    "print(sys.version_info)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
