--- a/nglview/tests/notebooks/caching.ipynb
+++ b/nglview/tests/notebooks/caching.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import pytraj as pt\n",
+    "from MDAnalysisTests import datafiles\n",
     "import nglview as nv\n",
     "\n",
     "traj = pt.load(nv.datafiles.TRR, nv.datafiles.PDB)\n",
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
