explicitly sending coordinates to JS (#96)
* explicitly sending coordinates: js update

* not sync, send msg

* add caching2-send-single-frame.ipynb nb

* doc

* fix test

* turn off

--- a/nglview/tests/notebooks/caching2-send-single-frame.ipynb
+++ b/nglview/tests/notebooks/caching2-send-single-frame.ipynb
@@ -2,17 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import pytraj as pt\n",
-    "from MDAnalysisTests import datafiles\n",
     "import nglview as nv\n",
     "\n",
-    "traj = pt.load(nv.datafiles.TRR, nv.datafiles.PDB)\n",
+    "root = \n",
+    "fn = root + 'f2_loop/md10.nc'\n",
+    "tn = root + '/prmtop'\n",
+    "\n",
+    "traj = pt.load(fn, tn).autoimage().superpose(mask='@P')\n",
     "\n",
     "view = nv.show_pytraj(traj)\n",
     "view.representations = []\n",
@@ -22,7 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view._clear_repr()\n",
+    "view.add_licorice('not hydrogen')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -40,6 +55,31 @@
    "outputs": [],
    "source": [
     "view.add_licorice()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pytraj.Trajectory, 1000 frames: \n",
+       "Size: 0.290751 (GB)\n",
+       "<Topology: 13008 atoms, 4189 residues, 4174 mols, PBC with box type = truncoct>\n",
+       "           "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "traj"
    ]
   }
  ],
