--- a/nglview/tests/notebooks/loadFile_cpp4.ipynb
+++ b/nglview/tests/notebooks/loadFile_cpp4.ipynb
@@ -57,6 +57,28 @@
    "source": [
     "view.center_view(index=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view._remove_component(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "view._load_data('3pqr.ccp4.gz', defaultRepresentation=True)"
+   ]
   }
  ],
  "metadata": {
