--- a/nglview/tests/notebooks/test_camera.ipynb
+++ b/nglview/tests/notebooks/test_camera.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'near': 0.1, 'aspect': 3.29796875, 'focalLength': 100, 'fov': 40, 'type': 'PerspectiveCamera', 'uuid': '920D2F23-2CBB-4151-96EB-40AB8FC1FCD2', 'zoom': 1, 'matrix': [1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1], 'far': 10000}\n"
+      "{'near': 0.1, 'aspect': 3.29796875, 'focalLength': 100, 'fov': 40, 'type': 'PerspectiveCamera', 'uuid': 'C15AE00D-79CC-4C15-81C8-1AECF17F8032', 'zoom': 1, 'matrix': [1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1], 'far': 10000}\n"
      ]
     }
    ],
@@ -54,6 +54,44 @@
     "nt.assert_almost_equal(camera['aspect'], 3.29796875)\n",
     "nt.assert_almost_equal(camera['far'], 10000)\n",
     "nt.assert_almost_equal(camera['zoom'], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from ipywidgets import Textarea\n",
+    "\n",
+    "text = Textarea()\n",
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<traitlets.traitlets.link at 0x2aaae06a2240>"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from traitlets import link\n",
+    "\n",
+    "link((view, 'camera_str'), (text, \"value\"))"
    ]
   }
  ],
