--- a/nglview/tests/notebooks/test_camera.ipynb
+++ b/nglview/tests/notebooks/test_camera.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'near': 0.1, 'aspect': 3.294652913411458, 'focalLength': 100, 'fov': 40, 'type': 'PerspectiveCamera', 'uuid': '401C00E9-94B9-442D-B1BD-D61C9AAA1C4B', 'zoom': 1, 'matrix': [1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1], 'far': 10000}\n"
+      "{'near': 30.005539107620812, 'far': 129.99446089237918, 'type': 'PerspectiveCamera', 'fov': 40, 'zoom': 1, 'matrix': [0.1266540139913559, 0.331083744764328, -0.9350627064704895, 0, -0.28803011775016785, 0.9143145084381104, 0.284723699092865, 0, 0.9492088556289673, 0.23326481878757477, 0.2111636847257614, 0, 75.93670654296875, 18.66118621826172, 16.893096923828125, 1], 'uuid': 'FD998EC2-C3FB-4B87-8676-6A5DD07A527B', 'focalLength': 100, 'aspect': 3.29796875}\n"
      ]
     }
    ],
@@ -59,40 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from ipywidgets import Textarea\n",
-    "\n",
-    "text = Textarea()\n",
-    "text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<traitlets.traitlets.link at 0x2aaae06aada0>"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from ipywidgets import Textarea, HBox\n",
     "from traitlets import link\n",
     "\n",
-    "link((view, 'camera_str'), (text, \"value\"))"
+    "text_camera = Textarea()\n",
+    "text_orientation = Textarea()\n",
+    "link((view, 'camera_str'), (text_camera, \"value\"))\n",
+    "link((view, 'orientation_str'), (text_orientation, \"value\"))\n",
+    "\n",
+    "HBox([text_camera, text_orientation])"
    ]
   }
  ],
